# RealTime-Microservices

./: README.md  docker-compose.yml  valgrind_output.txt
common/: CMakeLists.txt
common/include/: logger.h  task.h  task_ipc.h
common/src/: logger.c  task.c  task_ipc.c
docs/: commands.txt  generate_context.py  project_context.txt
sdk/image-builder/src/: main.py
sdk/image-builder/src/builder/: builder.py  exceptions.py
sdk/image-builder/src/builder/template/: Dockerfile.j2
sdk/image-builder/src/dslparser/: exceptions.py  parser.py
sdk/image-builder/src/publisher/: publisher.py
services/deploy-manager/: Dockerfile  pyproject.toml
services/deploy-manager/src/: __init__.py  exceptions.py  logger.py  main.py
services/deploy-manager/src/database/: redis_loader.py
services/deploy-manager/src/deploy/: builder.py  materializer.py  runner.py
services/deploy-manager/src/domain/: schedule.py  task.py
services/deploy-manager/src/manifest/: manifest_fetcher.py  parser.py
services/execution-manager/: CMakeLists.txt  Dockerfile
services/execution-manager/include/: app_task.h  execution_manager.h  execution_manager_timer_event.h  redis_reader.h  schedule.h
services/execution-manager/src/: app_task.c  execution_manager.c  execution_manager_timer_event.c  main.c  main.c.bak  redis_reader.c  schedule.c
services/multiply/: CMakeLists.txt
services/multiply/include/: task_wrapper.h
services/multiply/src/: app_task.c
services/subtract/src/: app_task.c
services/sum/: Dockerfile
services/sum/include/: app_task.h
services/sum/src/: app_task.c  task_wrapper.c
services/task-service/: CMakeLists.txt  Dockerfile
services/task-service/include/: task_config.h.in  task_service.h
services/task-service/src/: main.c  task_service.c
services/task-wrapper/: CMakeLists.txt  Dockerfile
services/task-wrapper/include/: app_task.h  task_wrapper.h  task_wrapper_message_event.h
services/task-wrapper/src/: app_task.c  app_task_multiply.c  app_task_subtract.c  app_task_sum.c  main.c  task_wrapper.c  task_wrapper_message_event.c
tests/: task_entry_1.h  task_entry_2.h
tests/code-tests/: original-main.c  schedule-h-main.c  task-h-main.c  tw-h-main.c
tests/tast-1/multiply/include/: app_task.h
tests/tast-1/multiply/src/: app_task.c  main.c  task_wrapper_message_event.c
tests/tast-1/subtract/src/: app_task.c
tests/tast-1/sum/: Dockerfile
tests/tast-1/sum/src/: app_task.c  task_wrapper.c
tests/test-0/: manifest.yaml
